--- a/basistech/index.html
+++ b/basistech/index.html
@@ -112,7 +112,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-1"></use>
+									<use xlink:href="images/sprite.svg#advantages-1"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -123,7 +123,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-2"></use>
+									<use xlink:href="images/sprite.svg#advantages-2"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -134,7 +134,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-3"></use>
+									<use xlink:href="images/sprite.svg#advantages-3"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -145,7 +145,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-4"></use>
+									<use xlink:href="images/sprite.svg#advantages-4"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -156,7 +156,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-5"></use>
+									<use xlink:href="images/sprite.svg#advantages-5"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
@@ -167,7 +167,7 @@
 						<div class="advantages__item">
 							<div class="advantages__item-icon">
 								<svg width="48" height="48">
-									<use xlink:href="images/sprite.svg#anvantages-6"></use>
+									<use xlink:href="images/sprite.svg#advantages-6"></use>
 								</svg>
 							</div>
 							<div class="advantages__item-content">
