--- a/basistech/vcore.html
+++ b/basistech/vcore.html
@@ -70,18 +70,10 @@
 						<div class="capabilities__item">
 							<div class="capabilities__item-image">
 								<svg width="120" height="120">
-									<use xlink:href="images/sprite.svg#capabilities-1"></use>
-								</svg>
-							</div>
-							<div class="sub-title capabilities__item-title ">Обеспечить максимальный уровень безопасности</div>
-						</div>
-						<div class="capabilities__item">
-							<div class="capabilities__item-image">
-								<svg width="120" height="120">
 									<use xlink:href="images/sprite.svg#capabilities-2"></use>
 								</svg>
 							</div>
-							<div class="sub-title capabilities__item-title ">Обеспечить высокую доступность и масштабируемость ИТ-ландшафта компании</div>
+							<div class="sub-title capabilities__item-title ">Обеспечить высокую доступность и масштабируемость <nobr>ИТ-ландшафта</nobr> компании</div>
 						</div>
 						<div class="capabilities__item">
 							<div class="capabilities__item-image">
@@ -90,6 +82,14 @@
 								</svg>
 							</div>
 							<div class="sub-title capabilities__item-title ">Централизовано управлять виртуализированными серверными мощностями</div>
+						</div>
+						<div class="capabilities__item">
+							<div class="capabilities__item-image">
+								<svg width="120" height="120">
+									<use xlink:href="images/sprite.svg#capabilities-6"></use>
+								</svg>
+							</div>
+							<div class="sub-title capabilities__item-title ">Отслеживать состояние облака</div>
 						</div>
 						<div class="capabilities__item">
 							<div class="capabilities__item-image">
@@ -105,15 +105,15 @@
 									<use xlink:href="images/sprite.svg#capabilities-5"></use>
 								</svg>
 							</div>
-							<div class="sub-title capabilities__item-title ">Эффективно строить сетевые взаимодействия внутри виртуальных дата-центров</div>
+							<div class="sub-title capabilities__item-title ">Эффективно строить сетевые взаимодействия внутри виртуальных <nobr>дата-центров</nobr></div>
 						</div>
 						<div class="capabilities__item">
 							<div class="capabilities__item-image">
 								<svg width="120" height="120">
-									<use xlink:href="images/sprite.svg#capabilities-6"></use>
+									<use xlink:href="images/sprite.svg#capabilities-1"></use>
 								</svg>
 							</div>
-							<div class="sub-title capabilities__item-title ">Отслеживать состояние облака</div>
+							<div class="sub-title capabilities__item-title ">Обеспечить максимальный уровень безопасности</div>
 						</div>
 					</div>
 				</section>
@@ -155,7 +155,7 @@
 								</div>
 							</div>
 							<div class="cards__item-bottom">
-								<div class="cards__item-title sub-title">Снижет операционные затратына сопровождение инфраструктуры</div>
+								<div class="cards__item-title sub-title">Снижет операционные затраты на сопровождение инфраструктуры</div>
 								<div class="cards__item-text">За счёт повышения уровня и качества обслуживания компонентов инфраструктуры</div>
 							</div>
 						</div>
@@ -173,7 +173,25 @@
 								</div>
 							</div>
 							<div class="cards__item-bottom">
-								<div class="cards__item-title sub-title">Инструменты централизованного управления компонентами ИТ-ландшафта</div>
+								<div class="cards__item-title sub-title">Предоставляет инструменты централизованного управления <nobr>ИТ-компонентами</nobr></div>
+							</div>
+						</div>
+						<div class="cards__item">
+							<div class="cards__item-top">
+								<div class="cards__item-image">
+									<svg width="240" height="120">
+										<use xlink:href="images/sprite.svg#tasks-5"></use>
+									</svg>
+								</div>
+								<div class="cards__item-icon">
+									<svg width="60" height="60">
+										<use xlink:href="images/sprite.svg#settings"></use>
+									</svg>
+								</div>
+							</div>
+							<div class="cards__item-bottom">
+								<div class="cards__item-title sub-title">Обеспечение высоко доступности всех узлов</div>
+								<div class="cards__item-text">В том числе благодаря встроенным инструментам мониторинга и восстановления компонентов</div>
 							</div>
 						</div>
 						<div class="cards__item">
@@ -193,23 +211,7 @@
 								<div class="cards__item-title sub-title">Упрощает процедуры сопровождения облачных ресурсов</div>
 							</div>
 						</div>
-						<div class="cards__item">
-							<div class="cards__item-top">
-								<div class="cards__item-image">
-									<svg width="240" height="120">
-										<use xlink:href="images/sprite.svg#tasks-5"></use>
-									</svg>
-								</div>
-								<div class="cards__item-icon">
-									<svg width="60" height="60">
-										<use xlink:href="images/sprite.svg#settings"></use>
-									</svg>
-								</div>
-							</div>
-							<div class="cards__item-bottom">
-								<div class="cards__item-title sub-title">Обеспечение высоко доступности всех узлов</div>
-							</div>
-						</div>
+	
 					</div>
 				</section>
 
@@ -383,7 +385,6 @@
 					<div class="architecture__content">
 						<div class="architecture__block">
 							<div class="architecture__block-title h4">Система управления</div>
-							<p>Программный комплекс программных модулей, который отвечает</p>
 							<ul>
 								<li>Предоставление различных интерфейсов управления облаком</li>
 								<li>Хранение состояния виртуальной инфраструктуры</li>
@@ -393,7 +394,6 @@
 						</div>
 						<div class="architecture__block">
 							<div class="architecture__block-title h4">Гипервизор 1 типа</div>
-							<p>Программное обеспечение, которое отвечает</p>
 							<ul>
 								<li>Взаимодействие с аппаратными компонентами серверного оборудования</li>
 								<li>Эмуляцию, виртуализацию на аппаратном и системном уровне</li>
@@ -453,7 +453,7 @@
 							</div>
 							<div class="cards__item-bottom">
 								<div class="cards__item-title sub-title">Системы мониторинга</div>
-								<div class="cards__item-text">Интеграция с системами мониторинга с использованием протоколов SNMP и ICMP</div>
+								<div class="cards__item-text">Интеграция с системами мониторинга</div>
 							</div>
 						</div>
 						<div class="cards__item">
