--- a/basistech/vcore.html
+++ b/basistech/vcore.html
@@ -49,7 +49,7 @@
 						<div class="product-banner__content">
 							<div class="product-banner__content-inner">
 								<h1>Базис.vCore</h1>
-								<div class="product-banner__content-text">Гипервизор первого типа и система управления, являющиеся универсальным программным комплексом для ИТ-инфраструктуры предприятия</div>
+								<div class="product-banner__content-text">Гипервизор первого типа и система управления виртуализацией, являющиеся универсальным программным комплексом для ИТ-инфраструктуры предприятия</div>
 								<div class="btn btn_big slider__item-btn">Тест-драйв</div>
 							</div>
 						</div>
