--- a/basistech/storage-security.html
+++ b/basistech/storage-security.html
@@ -333,13 +333,12 @@
 							<div class="contacts__list">
 								<div class="contacts__title">Контакты</div>
 								<a href="javascript:void(0);" class="contacts__item">+7 (495) 645-68-89</a>
-								<a href="javascript:void(0);" class="contacts__item">+7 (495) 645-68-89</a>
-								<a href="javascript:void(0);" class="contacts__item">info@tionix.ru</a>
-								<a href="javascript:void(0);" class="contacts__item">pr@tionix.ru для СМИ</a>
+								<a href="javascript:void(0);" class="contacts__item">info@basistech.ru</a>
+								<a href="javascript:void(0);" class="contacts__item">pr@basistech.ru для СМИ</a>
 							</div>
 							<div class="contacts__list">
 								<div class="contacts__title">Адреса</div>
-								<a href="javascript:void(0);" class="contacts__item">Москва, Ленинградский пр-т., д.35, стр.1</a>
+								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва,  ул. Годовикова, д. 9, ст. 10</a>
 								<a href="javascript:void(0);" class="contacts__item">Казань, ул. Жуковского, 5</a>
 							</div>
 						</div>
