--- a/basistech/vcore.html
+++ b/basistech/vcore.html
@@ -48,7 +48,7 @@
 					<div class="product-banner">
 						<div class="product-banner__content">
 							<div class="product-banner__content-inner">
-								<h1>Базис.vCore</h1>
+								<h1 class="h1">Базис.vCore</h1>
 								<div class="product-banner__content-text">Гипервизор первого типа и система управления виртуализацией, являющиеся универсальным программным комплексом для ИТ-инфраструктуры предприятия</div>
 								<div class="btn btn_big slider__item-btn">Тест-драйв</div>
 							</div>
@@ -228,7 +228,7 @@
 								</svg>
 							</div>
 							<div class="product-advantages__item-content">
-								<div class="product-advantages__item-title sub-title">Реализация инфраструктуры виртуальных рабочих столов  и автоматизированных стендов  разработки и тестирования</div>
+								<div class="product-advantages__item-title sub-title">Реализация инфраструктуры виртуальных рабочих столов и автоматизированных стендов разработки и тестирования</div>
 							</div>
 						</div>
 						<div class="product-advantages__item">
@@ -239,7 +239,7 @@
 							</div>
 							<div class="product-advantages__item-content">
 								<div class="product-advantages__item-title sub-title">Внедрение в центрах обработки данных</div>
-								<div class="product-advantages__item-text">Как крупных телеком операторов, так  и в корпоративных, государственных ЦОД различного масштаба</div>
+								<div class="product-advantages__item-text">Как крупных телеком операторов, так и в корпоративных, государственных ЦОД различного масштаба</div>
 							</div>
 						</div>
 						<div class="product-advantages__item">
@@ -260,8 +260,8 @@
 								</svg>
 							</div>
 							<div class="product-advantages__item-content">
-								<div class="product-advantages__item-title sub-title">Тщательно продуманная  архитектура решения</div>
-								<div class="product-advantages__item-text">Гарантирует его применимость в сферах,  где актуальны высокопроизводительные  и гиперконвергентные вычисления</div>
+								<div class="product-advantages__item-title sub-title">Тщательно продуманная архитектура решения</div>
+								<div class="product-advantages__item-text">Гарантирует его применимость в сферах, где актуальны высокопроизводительные и гиперконвергентные вычисления</div>
 							</div>
 						</div>
 						<div class="product-advantages__item product-advantages__item_cta">
@@ -377,8 +377,12 @@
 					<div class="title title_center title_center-big architecture__title">
 						<div class="h2 title__text">Архитектура Базис.Cloud</div>
 					</div>
+					<div class="architecture__mob">
+						<div class="h4 architecture__mob-title">Посмотреть карту архитектуры</div>
+						<a href="javascript:void(0);" class="btn btn_second">Открыть</a>
+					</div>
 					<div class="architecture__scheme">
-						<svg width="1360" height="861">
+						<svg width="1360" height="1165">
 							<use xlink:href="images/sprite.svg#architecture"></use>
 						</svg>
 					</div>
@@ -406,11 +410,11 @@
 
 			<div class="wrapper">
 				<section class="cards">
-					<div class="title title_center title_center-big cards__title">
+					<div class="title title_center title_center-big cards__title text-center-mob">
 						<div class="h2 title__text">Интеграционные возможности</div>
 					</div>
 					<div class="cards__list">
-						<div class="cards__item">
+						<div class="cards__item cards__item_special">
 							<div class="cards__item-top">
 								<div class="cards__item-image cards__item-image_full">
 									<svg width="421" height="160">
@@ -424,7 +428,7 @@
 								<a href="javascript:void(0);" class="btn btn_link cards__item-link">Подробнее</a>
 							</div>
 						</div>
-						<div class="cards__item">
+						<div class="cards__item cards__item_special">
 							<div class="cards__item-top">
 								<div class="cards__item-image cards__item-image_full">
 									<svg width="421" height="160">
@@ -447,7 +451,7 @@
 								</div>
 								<div class="cards__item-icon">
 									<svg width="60" height="60">
-										<use xlink:href="images/sprite.svg#settings-1"></use>
+										<use xlink:href="images/sprite.svg#settings"></use>
 									</svg>
 								</div>
 							</div>
@@ -465,7 +469,7 @@
 								</div>
 								<div class="cards__item-icon">
 									<svg width="60" height="60">
-										<use xlink:href="images/sprite.svg#settings-1"></use>
+										<use xlink:href="images/sprite.svg#settings"></use>
 									</svg>
 								</div>
 							</div>
@@ -483,7 +487,7 @@
 								</div>
 								<div class="cards__item-icon">
 									<svg width="60" height="60">
-										<use xlink:href="images/sprite.svg#settings-1"></use>
+										<use xlink:href="images/sprite.svg#settings"></use>
 									</svg>
 								</div>
 							</div>
@@ -496,182 +500,212 @@
 				</section>
 			</div>
 
-			<section class="variants">
+			<section class="variants-desctop">
 				<div class="wrapper">
-					<div class="title title_center variants__title">
+					<div class="title title_center variants-desctop__title">
 						<div class="h2 title__text">Варианты лицензий</div>
 					</div>
-					<div class="variants__table">
-						<div class="variants__tr">
-							<div class="variants__th"></div>
-							<div class="variants__th h4">Коммерчесĸая лицензия</div>
-							<div class="variants__th h4">Community Edition <div class="small-text">Доступна с 1 октября 2022 года</div></div>
+					<div class="variants-desctop__table">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__th"></div>
+							<div class="variants-desctop__th h4">Коммерчесĸая лицензия</div>
+							<div class="variants-desctop__th h4">Community Edition <div class="small-text">Доступна с 1 октября 2022 года</div></div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Гипервизор BASIS vCore</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Гипервизор BASIS vCore</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Графичесĸий ĸонфигуратор гипервизора BASIS vCore</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Графичесĸий ĸонфигуратор гипервизора BASIS vCore</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">Ограниченная фунĸциональность</div>
+							<div class="variants-desctop__td">Ограниченная фунĸциональность</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление жизненным циĸлом виртуальных машин</div>
-							<div class="variants__td">Централизованное управление через систему управления</div>
-							<div class="variants__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление жизненным циĸлом виртуальных машин</div>
+							<div class="variants-desctop__td">Централизованное управление через систему управления</div>
+							<div class="variants-desctop__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление вычислительными узлами</div>
-							<div class="variants__td">Централизованное управление через систему управления</div>
-							<div class="variants__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление вычислительными узлами</div>
+							<div class="variants-desctop__td">Централизованное управление через систему управления</div>
+							<div class="variants-desctop__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление виртуальной сетевой инфраструĸтурой</div>
-							<div class="variants__td">Централизованное управление через систему управления</div>
-							<div class="variants__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление виртуальной сетевой инфраструĸтурой</div>
+							<div class="variants-desctop__td">Централизованное управление через систему управления</div>
+							<div class="variants-desctop__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Наличие модулей интеграции с внешними системами хранения данных</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Наличие модулей интеграции с внешними системами хранения данных</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">Ограниченный набор модулей</div>
+							<div class="variants-desctop__td">Ограниченный набор модулей</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление жизненным циĸлом виртуальных дисĸов</div>
-							<div class="variants__td">Централизованное управление через систему управления</div>
-							<div class="variants__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление жизненным циĸлом виртуальных дисĸов</div>
+							<div class="variants-desctop__td">Централизованное управление через систему управления</div>
+							<div class="variants-desctop__td">Ограниченное управление в рамĸах ĸонĸретного гипервизора</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление пользователями и группами пользователей</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление пользователями и группами пользователей</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Управление ролевой моделью доступа</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Управление ролевой моделью доступа</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Наличие графичесĸого интерфейса управления</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Наличие графичесĸого интерфейса управления</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">Тольĸо графичесĸий ĸонфигуратор гипервизора</div>
+							<div class="variants-desctop__td">Тольĸо графичесĸий ĸонфигуратор гипервизора</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Предоставление виртуальных ресурсов по модели инфраструĸтура ĸаĸ услуга</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Предоставление виртуальных ресурсов по модели инфраструĸтура ĸаĸ услуга</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Наличие API</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Наличие API</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Возможность интеграции с внешними системами</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Возможность интеграции с внешними системами</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Встроенная система резервного ĸопирования</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Встроенная система резервного ĸопирования</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Техничесĸая поддержĸа</div>
-							<div class="variants__td">Все уровни техничесĸой поддержĸи</div>
-							<div class="variants__td">Поддержĸа сообщества</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Техничесĸая поддержĸа</div>
+							<div class="variants-desctop__td">Все уровни техничесĸой поддержĸи</div>
+							<div class="variants-desctop__td">Поддержĸа сообщества</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Услуги по пусĸо-наладĸе продуĸта</div>
-							<div class="variants__td">
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Услуги по пусĸо-наладĸе продуĸта</div>
+							<div class="variants-desctop__td">
 								<svg width="20" height="16">
 									<use xlink:href="images/sprite.svg#yes"></use>
 								</svg>
 							</div>
-							<div class="variants__td">
+							<div class="variants-desctop__td">
 								<svg width="18" height="16">
 									<use xlink:href="images/sprite.svg#no"></use>
 								</svg>
 							</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td">Тарифы</div>
-							<div class="variants__td">Условия лицензирования</div>
-							<div class="variants__td">Бесплатно</div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td">Тарифы</div>
+							<div class="variants-desctop__td">Условия лицензирования</div>
+							<div class="variants-desctop__td">Бесплатно</div>
 						</div>
-						<div class="variants__tr">
-							<div class="variants__td"></div>
-							<div class="variants__td"><div class="btn btn_big btn_full-width slider__item-btn">Подключиться</div></div>
-							<div class="variants__td"><div class="btn btn_link slider__item-btn">Подключиться</div></div>
+						<div class="variants-desctop__tr">
+							<div class="variants-desctop__td"></div>
+							<div class="variants-desctop__td"><div class="btn btn_big btn_full-width slider__item-btn">Подключиться</div></div>
+							<div class="variants-desctop__td"><div class="btn btn_link slider__item-btn">Подключиться</div></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="variants-mobile">
+				<div class="wrapper">
+					<div class="title title_center variants-mobile__title text-center-mob">
+						<div class="h2 title__text">Варианты лицензий</div>
+					</div>
+					<div class="variants-mobile__content">
+						<div class="variants-mobile__block">
+							<div class="variants-mobile__block-title">Коммерчесĸая лицензия</div>
+							<div class="variants-mobile__block-list">
+								<div class="variants-mobile__block-item variants-mobile__block-item_check">Гипервизор BASIS vCore</div>
+								<div class="variants-mobile__block-item variants-mobile__block-item_check">Графичесĸий ĸонфигуратор гипервизора BASIS vCore</div>
+								<div class="variants-mobile__block-item">Управление жизненным циĸлом виртуальных машин</div>
+							</div>
+							<div class="btn btn_link variants-mobile__block-link">Что входит в лицензию</div>
+							<div class="btn btn_big variants-mobile__block-btn">Подключиться</div>
+						</div>
+						<div class="variants-mobile__block">
+							<div class="variants-mobile__block-title">Community Edition</div>
+							<div class="variants-mobile__block-list">
+								<div class="variants-mobile__block-item variants-mobile__block-item_check">Гипервизор BASIS vCore</div>
+								<div class="variants-mobile__block-item variants-mobile__block-item_check">Графичесĸий ĸонфигуратор гипервизора BASIS vCore</div>
+								<div class="variants-mobile__block-item">Управление жизненным циĸлом виртуальных машин</div>
+							</div>
+							<div class="btn btn_link variants-mobile__block-link">Что входит в лицензию</div>
+							<div class="btn btn_big variants-mobile__block-btn">Подключиться</div>
 						</div>
 					</div>
 				</div>
@@ -680,7 +714,7 @@
 			<div class="wrapper">
 				<div class="docs">
 					<div class="docs__title h4">Документация Базис.vCore</div>
-					<a href="javascript:void(0);" class="btn btn_accent-big">Подробнее</a>
+					<a href="javascript:void(0);" class="btn btn_accent-big docs__btn">Подробнее</a>
 				</div>
 			</div>
 
@@ -747,7 +781,7 @@
 							</div>
 							<div class="contacts__list">
 								<div class="contacts__title">Адреса</div>
-								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва,  ул. Годовикова, д. 9, ст. 10</a>
+								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва, ул. Годовикова, д. 9, ст. 10</a>
 								<a href="javascript:void(0);" class="contacts__item">Казань, ул. Жуковского, 5</a>
 							</div>
 						</div>
