--- a/basistech/index.html
+++ b/basistech/index.html
@@ -376,7 +376,7 @@
 				<section class="union">
 					<div class="union__content">
 						<div class="h4 union__title">Объединение Ростелеком, <nobr>ГС-Инвест</nobr> и Yadro</div>
-						<div class="union__text">Компания образована в результате создания СП «Облачная платформа» лидирующими компаниями ИТ-рынка — «Ростелеком», YADRO  и GS Invest/Rubytech. Результатом объединения стала уникальная интеграция экспертиз известных разработчиков и появление единого продуктового портфеля от «ТИОНИКС», Digital Energy и «Скала Софтвер»</div>
+						<div class="union__text">Компания образована в результате создания СП «Облачная платформа» лидирующими компаниями ИТ-рынка — «Ростелеком», YADRO и GS Invest/Rubytech. Результатом объединения стала уникальная интеграция экспертиз известных разработчиков и появление единого продуктового портфеля от «ТИОНИКС», Digital Energy и «Скала Софтвер»</div>
 					</div>
 					<div class="union__image">
 						<svg class="union__banner-icon" width="609" height="387">
@@ -489,7 +489,7 @@
 							</div>
 							<div class="contacts__list">
 								<div class="contacts__title">Адреса</div>
-								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва,  ул. Годовикова, д. 9, ст. 10</a>
+								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва, ул. Годовикова, д. 9, ст. 10</a>
 								<a href="javascript:void(0);" class="contacts__item">Казань, ул. Жуковского, 5</a>
 							</div>
 						</div>
@@ -498,7 +498,7 @@
 						<div class="copyright footer__copyright">2022 © basis.ru</div>
 						<div class="sk footer__sk">
 							<div class="sk__logo">
-								<img src="images//dest/sk.webp" alt="">
+								<img src="images/dest/sk.webp" alt="" width="57" height="40">
 							</div>
 							<div class="sk__content">
 								<div class="sk__text">Basis является резидентом Сколково</div>
