--- a/basistech/storage-security.html
+++ b/basistech/storage-security.html
@@ -5,8 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>basistech</title>
-		<link rel="stylesheet" href="css/swiper-bundle.min.css">
-		<link rel="stylesheet" href="css/custom-select.css">
 		<link rel="stylesheet" href="css/app.min.css">
 	</head>
 	<body>
@@ -338,7 +336,7 @@
 							</div>
 							<div class="contacts__list">
 								<div class="contacts__title">Адреса</div>
-								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва,  ул. Годовикова, д. 9, ст. 10</a>
+								<a href="javascript:void(0);" class="contacts__item">БЦ «Калибр», Москва, ул. Годовикова, д. 9, ст. 10</a>
 								<a href="javascript:void(0);" class="contacts__item">Казань, ул. Жуковского, 5</a>
 							</div>
 						</div>
@@ -347,7 +345,7 @@
 						<div class="copyright footer__copyright">2022 © basis.ru</div>
 						<div class="sk footer__sk">
 							<div class="sk__logo">
-								<img src="images//dest/sk.webp" alt="">
+								<img src="images/dest/sk.webp" alt="" width="57" height="40">
 							</div>
 							<div class="sk__content">
 								<div class="sk__text">Basis является резидентом Сколково</div>
@@ -388,8 +386,6 @@
 				</div>
 			</form>
 		</div>
-		<script src="js/swiper-bundle.min.js"></script>
-		<script src="js/custom-select.min.js"></script>
 		<script src="js/imask.js"></script>
 		<script src="js/app.min.js"></script>
 	</body>
