--- a/basistech/storage-security.html
+++ b/basistech/storage-security.html
@@ -88,8 +88,8 @@
 								<div class="security__item-text sub-title">Базис.Storage Security обеспечивает реализацию мер защиты информации из состава набора мер, предусматриваемых приказом 17 ФСТЭК России</div>
 								<div class="security__item-term">Срок сертификации - сентябрь 2022 г.</div>
 								<div class="security__item-sub">Утверждены приказом ФСТЭК России от 2 июня 2020 г. № 76</div>
+								<div class="btn btn_big" data-popup="test-drive">Тест-драйв</div>
 							</div>
-							<div class="btn btn_big" data-popup="test-drive">Тест-драйв</div>
 
 						</div>
 					</div>
@@ -256,7 +256,7 @@
 								<div class="info__block-title h2">№1</div>
 								<div class="info__block-text sub-title">Первый проект сертифицированного ПО для обеспечения безопасности информации коммунальных СХД</div>
 							</div>
-							<a href="javascript:void(0);" class="btn btn_big-second">Тест-драйв</a>
+							<a href="javascript:void(0);" class="btn btn_big-second info__block-btn">Тест-драйв</a>
 						</div>
 						<div class="info__block">
 							<div class="info__block-content">
@@ -267,7 +267,7 @@
 								</div>
 								<div class="info__block-title h4">Документация и прайс-лист Базис.Storage Security</div>
 							</div>
-							<a href="javascript:void(0);" class="btn btn_accent-big">Подробнее</a>
+							<a href="javascript:void(0);" class="btn btn_accent-big info__block-btn">Подробнее</a>
 						</div>
 					</div>
 				</div>
