--- a/msi/index.html
+++ b/msi/index.html
@@ -122,7 +122,7 @@
 
 		<section class="gift">
 			<div class="gift__inner">
-				<div class="gift__title title">СКИДКИ И ПОДАРКИ УЧАЩИМСЯ</div>
+				<div class="gift__title title">РЕГИСТРИРУЙСЯ И ПОЛУЧАЙ ПОДАРКИ</div>
 				<div class="gift__image">
 					<img src="images/dest/steam.png" alt="">
 				</div>
