--- a/msi/index.html
+++ b/msi/index.html
@@ -33,7 +33,7 @@
 		<section class="games">
 			<div class="games__inner">
 				<div class="games__title title">Для учебы и игр</div>
-				<div class="games__text">Классика. Большой экран, чтобы поместилось больше таблиц Эксель, и мощный компьютер, чтобы легко выполнить любое домашнее задание. А после можнозапустить на часик-другой любимую игру. Купите один из этих мониторов с новым десктопомInfinite S3, и мы подарим Вам Steam код на 9000 ₽. Для учебы разумеется.</div>
+				<div class="games__text">Классика. Большой экран, чтобы поместилось больше таблиц Эксель, и мощный компьютер, чтобы легко выполнить любое домашнее задание. А после можно запустить на часик-другой любимую игру. Купите один из этих мониторов с новым десктопом Infinite S3, и мы подарим Вам Steam код на 9000 ₽. Для учебы разумеется.</div>
 				<div class="games__list">
 					<div class="games__item">
 						<div class="games__item-image">
