--- a/msi/index.html
+++ b/msi/index.html
@@ -154,15 +154,15 @@
 						<li>Участие в Акции могут принимать только физические лица, достигшие возраста 18 лет.</li>
 						<li>Принимая участие в Акции, участник разрешает компании MSI осуществлять обработку (сбор, запись, систематизацию, накопление, 
 						хранение, уточнение (обновление, изменение), извлечение, использование, передачу компании MSI (распространение, предоставление, доступ), обезличивание, блокирование, удаление, уничтожение) персональных данных исключительно с целью участия в конкурсах, проводимых компанией MSI и ее партнеров, а также в целях получения рекламной и новостной рассылки от компании MSI.</li>
-						<li>Модели, включенные в список Акции и указанные в настоящих правилах, могут отличаться от любых фотографий либо графических 
+						<li class="hide" style="display: none;">Модели, включенные в список Акции и указанные в настоящих правилах, могут отличаться от любых фотографий либо графических 
 						изображений, используемых на рекламно-информационных материалах, призванных информировать участников Акции об условиях его проведения. Модель, комплектация, цвета и другие параметры с характеристиками определяются по усмотрению организатора Акции и могут не совпадать с ожиданиями участников.</li>
-						<li>Количество акционных моделей ограничено. Организатор не несет ответственности за невозможность покупки вследствие окончания 
+						<li class="hide" style="display: none;">Количество акционных моделей ограничено. Организатор не несет ответственности за невозможность покупки вследствие окончания 
 						наличия акционных моделей в магазинах партнеров или завершения акции в данном магазине партнера.</li>
-						<li>Список подарков и размер скидок для конкретных моделей, представленные на данном сайте, несут ознакомительный характер, итоговый 
+						<li class="hide" style="display: none;">Список подарков и размер скидок для конкретных моделей, представленные на данном сайте, несут ознакомительный характер, итоговый 
 						список подарков и размер скидки зависят от магазина-партнёра.</li>
-						<li>В соответствии с Налоговым Кодексом Российской Федерации Участник несет ответственность за подачу налоговой декларации и, в случаях
+						<li class="hide" style="display: none;">В соответствии с Налоговым Кодексом Российской Федерации Участник несет ответственность за подачу налоговой декларации и, в случаях
 						предусмотренных действующим законодательством, уплату налога на доходы физических лиц. Согласно законодательству РФ не облагаются налогом на доходы физических лиц (НДФЛ) доходы, не превышающие 4000 рублей, полученные за налоговый период от организаций, в том числе в виде подарков, выигрышей или призов в проводимых конкурсах, играх и других мероприятиях в целях рекламы товаров (работ, услуг) (п. 28 ст. 217 НК РФ). В случае превышения в налоговом периоде установленного законодательством РФ размера необлагаемого НДФЛ дохода налогоплательщика в виде подарков от организаций, Участник Акции несет обязанность по уплате НДФЛ самостоятельно.</li>
-						<li>Организатор Акции (его представитель, представитель службы, организующей доставку) при продаже (доставке подарка) может потребовать
+						<li class="hide" style="display: none;">Организатор Акции (его представитель, представитель службы, организующей доставку) при продаже (доставке подарка) может потребовать
 						от участника Акции предъявить документы, удостоверяющие личность.</li>
 					</ol>
 				</div>
