--- a/basistech/index.html
+++ b/basistech/index.html
@@ -344,7 +344,7 @@
 						<div class="h2 title__text">Новости компании</div>
 						<a href="javascript:void(0);" class="btn btn_link title__link">Все новости</a>
 					</div>
-					<div class="news__list swiper">
+					<div class="news__list news-slider swiper">
 						<div class="swiper-wrapper">
 							<a href="javascript:void(0);" class="swiper-slide news__item">
 								<img src="images/dest/no-photo.svg" alt="" class="news__item-img" width="403" height="199">
