--- a/msi-new/index.html
+++ b/msi-new/index.html
@@ -874,7 +874,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="filter__tech-item swiper-slide"  data-image="images/rooms/desc/monitor/.jpg" data-imagemob="images/rooms/mob/monitor/.jpg">
+                        <div class="filter__tech-item swiper-slide"  data-image="images/rooms/desc/monitor/MAG_275R.jpg" data-imagemob="images/rooms/mob/monitor/MAG_275R_mob.jpg">
                             <div class="filter__tech-item-image">
                                 <img src="images/monitor/MAG275R.png" alt="">
                             </div>
@@ -1499,7 +1499,7 @@
                     <div class="filter__row-three swiper-wrapper">
                         <div class="filter__tech-item swiper-slide"  data-image="images/rooms/desc/monitor/MPG-273CQR_2D1.jpg" data-imagemob="images/rooms/mob/monitor/MPG-273CQR_2D1_mob.jpg">
                             <div class="filter__tech-item-image">
-                                <img src="images/monitor/.png" alt="">
+                                <img src="images/monitor/Artymis_273cqr.PNG" alt="">
                             </div>
                             <div class="filter__tech-item-title">Artymis 273CQR</div>
                             <div class="filter__tech-item-text">
