--- a/msi-new/index.html
+++ b/msi-new/index.html
@@ -13,8 +13,8 @@
         <section class="banner">
             <img src="images/logo.svg" class="logo">
             <picture>
-                <source srcset="images/LP_gaming_NEW_mob_2.jpg" media="(max-width: 767px)">
-                <img src="images/banner-new.webp" alt="">
+                <source srcset="images/LP_gaming_NEW_mob_2.png" media="(max-width: 767px)">
+                <img src="images/LP_banner_1.webp" alt="">
             </picture>
         </section>
 
